<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrinterApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="generating_pdf">Generating pdf &#8230;</string>
    <string name="printing_completed">Printing completed</string>
    <string name="error_while_printing">There is an error while printing. Please try again</string>
    <string name="printer_app_didnot_recieve_date">Data not received from CommCare ODK to print</string>
    <string name="configure_pdf_name">Configure PDF name</string>
    
	<string name="pdf_path">Pdf path</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="alert">Alert</string>
	<string name="browse">Browse</string>
	<string name="pdf_apps_configuration">Printing Apps Configuration</string>
	<string name="location_of_pdf">Location of the PDF</string>
	
	<string name="waiting_for_printer">"Waiting for printer connection&#8230;"</string>
	<string name="printjob_queed">"PrintJob Queued&#8230;"</string>
	<string name="printjob_started">"PrintJob Started&#8230;"</string>
	<string name="printjob_blocked">"PrintJob Blocked and restarting&#8230;"</string>
	<string name="printjob_fialed">"PrintJob failed and restarting&#8230;"</string>
	<string name="printing_done">"Printing done successfully"</string>
	<string name="problem_while_priting">There is a problem </string>
	<string name="please_enter_pdf_name">Please enter Pdf name</string>
	<string name="pdf_configuration_path_is">PDF Configuration path is: </string>
	<string name="if_you_want_change_pdf">If you want to change it, please click the below button</string>
                           
	
</resources>
