<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="gone"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pdf_apps_configuration"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_of_pdf"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_pdf_conf_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_browse"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse" />
    </LinearLayout>

</LinearLayout>